--- a/Full_Stack_Foundations/restaurant/templates/menu.html
+++ b/Full_Stack_Foundations/restaurant/templates/menu.html
@@ -3,6 +3,11 @@
 
 		<h1>{{ restaurant.name }}</h1>
 
+		<a href = '{{url_for('newMenuItem', restaurant_id = restaurant.id)}}'>Create new Item</a>
+
+		</br>
+		</br>
+
 		{% for i in items %}
 
 		{{ i.name }}
