--- a/Full_Stack_Foundations/restaurant/templates/deletemenuitem.html
+++ b/Full_Stack_Foundations/restaurant/templates/deletemenuitem.html
@@ -1,14 +1,18 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 	<body>
-		<h1>Delete Menu Item</h1>
+		<div class = 'pane'>
+			<h1>Delete Menu Item</h1>
 
-		<form action="{{ url_for('deleteMenuItem', restaurant_id = restaurant_id, menu_id = menu_id )}}" method = 'post'>
+			<form action="{{ url_for('deleteMenuItem', restaurant_id = restaurant_id, menu_id = menu_id )}}" method = 'post'>
 
-		<input type = 'submit' value='Delete'>
+			<input type = 'submit' value='Delete'>
 
-		</form>
+			</form>
 
-		<a href='{{url_for('restaurantMenu', restaurant_id = restaurant_id)}}'> Cancel </a>
-
+			<a href='{{url_for('restaurantMenu', restaurant_id = restaurant_id)}}'> Cancel </a>
+		</div>
 	</body>
 </html>
