--- a/Full_Stack_Foundations/restaurant/templates/editmenuitem.html
+++ b/Full_Stack_Foundations/restaurant/templates/editmenuitem.html
@@ -1,16 +1,20 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 	<body>
-		<h1>Edit Menu Item</h1>
+		<div class = 'pane'>
+			<h1>Edit Menu Item</h1>
 
-		<form action="{{ url_for('editMenuItem', restaurant_id = restaurant_id, menu_id = menu_id )}}" method = 'post'>
+			<form action="{{ url_for('editMenuItem', restaurant_id = restaurant_id, menu_id = menu_id )}}" method = 'post'>
 
-		<p> Name: </p>
-		<input type = 'text' size='30' name='name' placeholder='{{item.name}}'>
-		<input type = 'submit' value='Edit'>
+			<p> Name: </p>
+			<input type = 'text' size='30' name='name' placeholder='{{item.name}}'>
+			<input type = 'submit' value='Edit'>
 
-		</form>
+			</form>
 
-		<a href='{{url_for('restaurantMenu', restaurant_id = restaurant_id)}}'> Cancel </a>
-
+			<a href='{{url_for('restaurantMenu', restaurant_id = restaurant_id)}}'> Cancel </a>
+		</div>
 	</body>
 </html>
