--- a/Full_Stack_Foundations/restaurant/templates/menu.html
+++ b/Full_Stack_Foundations/restaurant/templates/menu.html
@@ -1,32 +1,60 @@
 <html>
+<head>
+	<link rel=stylesheet type=text/css href="{{ url_for('static', filename='styles.css') }}">
+</head>
 	<body>
+		<div class = 'pane'>
 
-		<h1>{{ restaurant.name }}</h1>
+			<div class = 'header'>
+				<h1>{{ restaurant.name }}</h1>
+			</div>
 
-		<a href = '{{url_for('newMenuItem', restaurant_id = restaurant.id)}}'>Create new Item</a>
+			<div class="flash">
+				{% with messages = get_flashed_messages() %}
+					{% if messages %}
+						<ul>
+						{% for message in messages %}
+							<li><strong> {{ message }} </strong> </li>
+						{% endfor %}
+						</ul>
+					{% endif %}
+				{% endwith %}
+			</div>
 
-		</br>
-		</br>
+			<a href = '{{url_for('newMenuItem', restaurant_id = restaurant.id)}}'>Create new Item</a>
 
-		{% for i in items %}
+			</br>
 
-		{{ i.name }}
-		</br>
+			{% for i in items %}
 
-		{{ i.description }}
-		</br>
+			<div class="name">
+				<p>
+					{{ i.name }}
+				</p>
+			</div>
 
-		{{ i.price }}
-		</br>
+			
+			<div class="price">
+				<p>
+					{{ i.price }}
+				</p>
+			</div>
 
-		<a href = '{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = i.id)}}'>Edit</a>
-		</br>
-		<a href = '{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id = i.id)}}'>Delete</a>
+			<div class="description">
+				<p>
+					{{ i.description }}
+				</p>
+			</div>
 
-		</br>
-		</br>
+			<a href = '{{url_for('editMenuItem', restaurant_id = restaurant.id, menu_id = i.id)}}'>Edit</a>
+			<a href = '{{url_for('deleteMenuItem', restaurant_id = restaurant.id, menu_id = i.id)}}'>Delete</a>
 
-		{% endfor %}
+			</br>
+			</br>
+
+			{% endfor %}
+
+		</div> 
 
 	</body>
 </html>
